--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.2.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.6.3",
     "register-service-worker": "^1.7.1",
+    "tailwind-glassmorphism": "^1.0.6",
+    "vee-validate": "^4.4.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuefire": "^3.0.0-alpha.2",
+    "vuex": "^4.0.0-0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
