--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.2.0",
+    "@vee-validate/rules": "^4.1.20",
     "core-js": "^3.6.5",
     "firebase": "^8.6.3",
     "register-service-worker": "^1.7.1",
