--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@vee-validate/rules": "^4.1.20",
     "core-js": "^3.6.5",
     "firebase": "^8.6.3",
+    "lodash": "^4.17.15",
     "register-service-worker": "^1.7.1",
     "tailwind-glassmorphism": "^1.0.6",
     "vee-validate": "^4.4.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuefire": "^3.0.0-alpha.2",
     "vuex": "^4.0.0-0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "~4.5.0",
