--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vee-validate": "^4.4.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-google-map": "^0.8.0",
     "vuex": "^4.0.0-0",
     "yup": "^0.32.9"
   },
